# ac_std

./: .gitignore  CMakeLists.txt  README.md
include/ac_std/core/: Result.h  platform.h
include/ac_std/profiling/: Timer.h
include/core/: platform.h
src/ac_std/profiling/: Timer.cpp
